# foedus

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.web  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
agent_game/: __init__.py  cli.py  core.py  fog.py  legal.py  loop.py  mapgen.py  resolve.py
agent_game/agents/: __init__.py  base.py  random_agent.py
docs/design/: 2026-04-27-archetypes-v0.2.md  2026-04-27-press-v0.md  mechanics.md
docs/plans/: 2026-04-27-archetypes-v0.2.md  2026-04-27-press-v0.md
docs/research/: 2026-04-29-alliance-bonus-experiment.md  README.md  (+5 more)
foedus/: __init__.py  agent_build.py  archetypes.py  cli.py  core.py  fog.py  legal.py  loop.py  mapgen.py  press.py  rating.py  resolve.py  scoring.py
migrations/: env.py
research_runs/: 2026-04-30-aid-given-cap-2.json  2026-04-30-aid-given-cap-2.md  2026-04-30-aid-given-cap-3.json  2026-04-30-aid-given-cap-3.md  2026-04-30-aid-given-cap-999.json  2026-04-30-baseline-post-redesign.json  2026-04-30-no-leverage-bonus.json  2026-04-30-no-leverage-bonus.md  2026-04-30-v2-heuristics.json  2026-04-30-v2-heuristics.md  2026-04-30-v3-inverse-leverage-gate.json  2026-04-30-v3b-tighter-gate.md  2026-04-30-with-new-heuristics.json  2026-04-30-with-new-heuristics.md
scripts/: compare_depth_runs.py  foedus_compute_ratings.py  foedus_depth_eval.py  foedus_press_client.py  foedus_press_play.py  foedus_press_server.py  foedus_sim_analyze.py  foedus_sim_sweep.py  spike_local_serve.py
tests/: helpers.py  test_agent_build.py  test_agents.py  test_aid.py  test_aid_given_cap.py  test_archetypes.py  test_betrayal.py  test_chat.py  test_combat_reward.py  test_compare_depth_runs.py  test_core_types.py  test_depth_eval_e2e.py  test_detente.py  test_detente_reset.py  test_detente_v2.py  test_determinism.py  test_eval_bootstrap.py  test_eval_metrics.py  test_eval_permutation.py  test_eval_probes.py  test_eval_render.py  test_fog.py  test_fog_press.py  test_game_server.py  test_heuristic_agent.py  test_heuristic_coalition_builder.py  test_heuristic_late_closer.py  test_heuristic_opportunist.py  test_heuristic_press.py  test_heuristics.py  test_high_value_supplies.py  test_intent_dependencies.py  test_legal.py  test_leverage.py  test_lifecycle.py  test_live_intent_unlock.py  test_loop.py  test_mapgen.py  test_normalize.py  test_playtest_feedback_bundle1.py  (+22 more)
(+103 files in other folders)
