[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "foedus"
version = "0.1.0"
description = "Lightweight Diplomacy-inspired multi-agent game for NN training"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
foedus = "foedus.cli:main"

[tool.setuptools.packages.find]
include = ["foedus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
