[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "foedus"
version = "0.1.0"
description = "Lightweight Diplomacy-inspired multi-agent game for NN training"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "openskill>=6.0", "fastapi>=0.110", "uvicorn[standard]>=0.30", "httpx>=0.27"]
rating = ["openskill>=6.0"]
remote = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "httpx>=0.27"]

[project.scripts]
foedus = "foedus.cli:main"

[tool.setuptools.packages.find]
include = ["foedus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
